<?xml version="1.0" encoding="utf-8"?>
<!--
 
	Copyright 2010-2011 Andrea De Pasquale
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	   http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
	
-->
<resources>
	<string name="ApplicationLabel">Android Web SMS</string>
	<string name="ComposeActivityLabel">Android Web SMS</string>
	<string name="ReceiverTextHint">Destinatario</string>
	<string name="MessageTextHint">Messaggio</string>
	<string name="MessageSend">Invia</string>
	<string name="ClearMenuItem">Cancella</string>
	<string name="CounterMenuItem">Contatore</string>
	<string name="SettingsMenuItem">Impostazioni</string>
	<string name="SettingsActivityLabel">Impostazioni</string>
	<string name="VodafonePreferenceCategory">Account www.vodafone.it</string>
	<string name="UsernamePreference">Nome utente</string>
	<string name="PasswordPreference">Password</string>
	<string name="OperationsPreferenceCategory">Operazioni automatiche</string>
	<string name="SaveSMSPreference">Salva messaggi inviati</string>
	<string name="ClearSMSPreference">Cancella dopo l\'invio</string>
	<string name="NotificationsPreferenceCategory">Notifiche attive</string>
	<string name="NotifySuccessPreference">Notifica invio riuscito</string>
	<string name="NotifyStatusPreference">Notifica stato invio</string>
	<string name="InterfacePreferenceCategory">Interfaccia grafica</string>
	<string name="FilterReceiverPreference">Filtraggio rubrica</string>
	<string name="DetailsPreferenceCategory">Dettagli applicazione</string>
	<string name="AboutPreference">Android Web SMS 1.13</string>
	<string name="AboutPreferenceSummary">© 2010-2011 Andrea De Pasquale</string>
	<string name="AboutURL">http://code.google.com/p/awsms/</string>
	<string name="FeedbackPreference">Scrivi allo sviluppatore</string>
	<string name="FeedbackPreferenceSummary">Segnala qualsiasi problema e/o suggerisci miglioramenti</string>
	<string name="FeedbackURL">http://code.google.com/p/awsms/issues/list</string>
	<string name="DonatePreference">Effettua una donazione</string>
	<string name="DonatePreferenceSummary">Contribuisci economicamente allo sviluppo del programma</string>
	<string name="DonateURL">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=andrea%40de%2dpasquale%2ename&amp;lc=IT&amp;item_name=Android%20Web%20SMS&amp;currency_code=EUR&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted</string>
	<string name="SettingsDialogTitle">Configurazione account</string>
	<string name="SettingsDialogMessage">Prima di poter inviare un messaggio, è necessario configurare nome utente e password relativi al sito Vodafone. Effettuare questa operazione adesso?</string>
	<string name="SettingsDialogPositiveButton">Sì</string>
	<string name="SettingsDialogNegativeButton">No</string>
	<string name="CounterDialogTitle">Contatore messaggi</string>
	<string name="CounterDialogButton">Chiudi</string>
	<string name="CaptchaDialogTitle">Richiesta CAPTCHA</string>
	<string name="CaptchaDialogTextHint">Codice</string>
	<string name="CaptchaDialogButton">Decodifica</string>
	<string name="CaptchaNotification">Richiesta decodifica manuale del CAPTCHA</string>
	<string name="ReceiverInvalid">Il destinatario non è valido</string>
	<string name="MessageInvalid">Il messaggio non è valido</string>
	<string name="NetworkUnavailable">Nessuna connessione di rete disponibile</string>
	<string name="SMSValid">SMS inserito nella coda di invio</string>
	<string name="WebSenderNetworkError">Errore di connessione, riprova più tardi</string>
	<string name="WebSenderSettingsInvalid">Il nome utente e/o la password non sono validi</string>
	<string name="WebSenderProtocolError">Errore di comunicazione con il sito Vodafone</string>
	<string name="WebSenderLimitReached">Gli SMS gratuiti di oggi sono esauriti</string>
	<string name="WebSenderReceiverNotAllowed">Il destinatario non è un cliente Vodafone</string>
	<string name="WebSenderUnknownError">Non è possibile inviare il messaggio</string>
	<string name="WebSenderMessageSent">Il messaggio è stato inviato</string>
	<string name="UpdatePromoText">Android Web SMS si evolve e diventa Ermete SMS! A partire dal prossimo aggiornamento potrai scoprire la nuova interfaccia e tantissime nuove funzioni, come l'invio multiplo.</string>
</resources>
