<?xml version="1.0" encoding="utf-8"?>
<!--
 
	Copyright 2010-2011 Andrea De Pasquale
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	   http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
	
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/VodafonePreferenceCategory">
		<EditTextPreference android:title="@string/UsernamePreference"
			android:key="VodafoneUsername" />
		<EditTextPreference android:title="@string/PasswordPreference"
			android:key="VodafonePassword" android:password="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/OperationsPreferenceCategory">
		<CheckBoxPreference android:title="@string/SaveSMSPreference"
			android:key="SaveSMS" android:defaultValue="true" />
		<ListPreference android:title="@string/ClearSMSPreference"
			android:key="ClearSMS" android:entries="@array/ClearSMSEntries" 
			android:entryValues="@array/ClearSMSValues" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/NotificationsPreferenceCategory">
		<CheckBoxPreference android:title="@string/NotifySuccessPreference"
			android:key="NotifySuccess" android:defaultValue="false" />
		<CheckBoxPreference android:title="@string/NotifyStatusPreference"
			android:key="NotifyStatus" android:defaultValue="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/DetailsPreferenceCategory">
		<Preference android:title="@string/AboutPreference"
			android:summary="@string/AboutPreferenceSummary" 
			android:key="About" />
		<Preference android:title="@string/FeedbackPreference"
			android:summary="@string/FeedbackPreferenceSummary"
			android:key="Feedback" />
		<Preference android:title="@string/DonatePreference"
			android:summary="@string/DonatePreferenceSummary"
			android:key="Donate" />
	</PreferenceCategory>
</PreferenceScreen>
